updated sections positiion

--- a/index.html
+++ b/index.html
@@ -102,179 +102,200 @@
 
 	</section> -->
 
-	<!---start categories section---->
-	<section class="categories" id="categories">
-		<div class="center-text">
-			<h5>PROGRAMS</h5>
-			<h2>Key Programs & Segments We Offer</h2>
+	<!---start about section---->
+	<section class="about" id="about">
+		<div class="about-header">
+			<div class="about-text">
+				<h2>About Yours Tutor</h2>
+				<p>Yours Tutor is a premier educational institution dedicated to providing world-class individual tuition services. Founded with the vision of making quality education accessible to every student, we have established ourselves as the preferred choice for personalized learning across India and beyond.</p>
+			</div>
 		</div>
 
-		<div class="categories-content">
-			<div class="box">
-				<img src="img/cate1.png">
-				<h3>KG to 12th Grade</h3>
-				<p>CBSE | ICSE | IGCSE | IB | State Board</p>
+		<div class="about-cards">
+			<div class="about-card">
+				<div class="card-icon">
+					<i class='bx bxs-target-lock'></i>
+				</div>
+				<div class="card-content">
+					<h3>Our Mission</h3>
+					<p>To provide expert, personalized education that transforms students from below average to toppers, ensuring academic excellence and holistic development.</p>
+				</div>
 			</div>
 
-			<div class="box">
-				<img src="img/cate2.png">
-				<h3>Undergraduate & Postgraduate</h3>
-				<p>BA, BSc, BCom, MA, MSc, MCom & more</p>
+			<div class="about-card">
+				<div class="card-icon">
+					<i class='bx bxs-bulb'></i>
+				</div>
+				<div class="card-content">
+					<h3>Our Vision</h3>
+					<p>To become the world's finest individual tuition provider, making quality education accessible to students from KG to PG across all subjects and syllabi.</p>
+				</div>
 			</div>
 
-			<div class="box">
-				<img src="img/cate3.png">
-				<h3>B.Tech Tuition</h3>
-				<p>All branches & subjects</p>
+			<div class="about-card">
+				<div class="card-icon">
+					<i class='bx bxs-globe-alt'></i>
+				</div>
+				<div class="card-content">
+					<h3>Global Presence</h3>
+					<p>We serve students across India, UK, USA, GCC Countries, Africa, Japan, and Australia, making quality education accessible worldwide.</p>
+				</div>
 			</div>
-
-			
-
 		</div>
 
-		<div class="main-btn">
-			<a href="#" class="btn">All Programs</a>
+		<div class="why-choose-section">
+			<h3>Why Choose Yours Tutor?</h3>
+			<div class="features-grid">
+				<div class="feature-item">
+					<i class='bx bxs-user-check'></i>
+					<span>Expert Verified Tutors</span>
+				</div>
+				<div class="feature-item">
+					<i class='bx bxs-home-alt-2'></i>
+					<span>Home & Online Classes</span>
+				</div>
+				<div class="feature-item">
+					<i class='bx bxs-group'></i>
+					<span>One-to-One & Group</span>
+				</div>
+				<div class="feature-item">
+					<i class='bx bxs-graduation'></i>
+					<span>KG to PG Coverage</span>
+				</div>
+				<div class="feature-item">
+					<i class='bx bxs-globe'></i>
+					<span>8+ Languages</span>
+				</div>
+				<div class="feature-item">
+					<i class='bx bxs-phone-call'></i>
+					<span>Parent WhatsApp Support</span>
+				</div>
+			</div>
+		</div>
+
+		<div class="about-cta">
+			<a href="#" class="btn">Learn More About Us</a>
 		</div>
 	</section>
 
-	<!---start course section---->
-	<section class="courses" id="courses">
+
+
+	<!---start features section---->
+	<section class="features" id="courses">
 		<div class="center-text">
 			<h5>FEATURES</h5>
-			<h2>Our Features</h2>
+			<h2>Why Choose Yours Tutor?</h2>
+			<p>Discover the unique advantages that make us the preferred choice for quality education</p>
 		</div>
 
-		<div class="courses-content">
-			<div class="row">
-				<img src="img/course1.jpg">
-				<div class="courses-text">
-					<h5>Expert Tutors</h5>
-					<h3>Handpicked tutors with strong subject knowledge and teaching experience</h3>
-					<h6>Verified & Experienced</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>Verified Tutors</p>
-						</div>
+		<div class="features-content">
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-user-check'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Expert Verified Tutors</h3>
+					<p>Handpicked tutors with strong subject knowledge and extensive teaching experience. All tutors are verified and background-checked.</p>
+					<div class="feature-badge">
+						<span>Verified</span>
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
-				<img src="img/course2.jpg">
-				<div class="courses-text">
-					<h5>Flexible Learning</h5>
-					<h3>Home Tuition & Online Classes - Flexible learning options</h3>
-					<h6>At your home or through live online sessions</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>Home & Online</p>
-						</div>
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-home-alt-2'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Home & Online Classes</h3>
+					<p>Flexible learning options - receive quality education at your home or through live interactive online sessions.</p>
+					<div class="feature-badge">
+						<span>Flexible</span>
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
-				<img src="img/course3.jpg">
-				<div class="courses-text">
-					<h5>Dedicated Support</h5>
-					<h3>Dedicated Mentor Support with monthly assessments & feedback</h3>
-					<h6>Regular tests and progress reports</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>Mentor Support</p>
-						</div>
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-group'></i>
+				</div>
+				<div class="feature-text">
+					<h3>One-to-One & Group</h3>
+					<p>Choose between personalized individual attention or collaborative group learning based on your preference.</p>
+					<div class="feature-badge">
+						<span>Personalized</span>
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
-				<img src="img/course4.jpg">
-				<div class="courses-text">
-					<h5>Parent Support</h5>
-					<h3>Parent WhatsApp Support Group for real-time updates</h3>
-					<h6>Performance insights and progress tracking</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>WhatsApp Group</p>
-						</div>
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-user-detail'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Dedicated Mentor Support</h3>
+					<p>Expert mentors monitor progress and provide academic guidance with monthly assessments and detailed feedback.</p>
+					<div class="feature-badge">
+						<span>Supported</span>
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
-				<img src="img/course5.jpg">
-				<div class="courses-text">
-					<h5>Multilingual Classes</h5>
-					<h3>Learn in English, Hindi, Arabic, Malayalam, Tamil, Kannada, Marathi, Odiya</h3>
-					<h6>Multiple language options available</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>8+ Languages</p>
-						</div>
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-phone-call'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Parent WhatsApp Group</h3>
+					<p>Stay connected with real-time updates, performance insights, and progress tracking through our dedicated parent support group.</p>
+					<div class="feature-badge">
+						<span>Connected</span>
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
-				<img src="img/course1.jpg">
-				<div class="courses-text">
-					<h5>One-to-One / Group</h5>
-					<h3>Customized classes for individuals or small groups</h3>
-					<h6>Personalized attention and group learning options</h6>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-						<div class="review">
-							<p>Flexible Options</p>
-						</div>
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-globe'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Multilingual Classes</h3>
+					<p>Learn in your preferred language - English, Hindi, Arabic, Malayalam, Tamil, Kannada, Marathi, Odiya, and more.</p>
+					<div class="feature-badge">
+						<span>8+ Languages</span>
 					</div>
 				</div>
 			</div>
 
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-graduation'></i>
+				</div>
+				<div class="feature-text">
+					<h3>KG to PG Coverage</h3>
+					<p>Comprehensive education from Kindergarten to Post-Graduation across all subjects and syllabi.</p>
+					<div class="feature-badge">
+						<span>Complete</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="feature-card">
+				<div class="feature-icon">
+					<i class='bx bxs-time'></i>
+				</div>
+				<div class="feature-text">
+					<h3>Flexible Scheduling</h3>
+					<p>Choose your preferred timing - full syllabus coverage, doubt-clearing sessions, or quick revision classes.</p>
+					<div class="feature-badge">
+						<span>Convenient</span>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="main-btn">
-			<a href="#" class="btn">Learn More</a>
+			<a href="#" class="btn">Explore All Features</a>
 		</div>
 	</section>
 
@@ -535,7 +556,7 @@
 		</div>
 	</section>
 
-	<!---start cta section---->
+	<!-- -start cta section--
 	<section class="cta">
 		<div class="center-text">
 			<h5>Success Stories</h5>
@@ -568,28 +589,6 @@
 			</div>
 
 		</div>
-	</section>
-
-	<!---start about section---->
-	<section class="about" id="about">
-		<div class="about-img">
-			<img src="img/about.png">
-		</div>
-
-		<div class="about-text">
-			<h2>Success Stories - From Below Average to Toppers</h2>
-			<p>Our students have achieved remarkable success through our personalized tutoring approach. Here are some of our proud achievements:</p>
-			<h4>Devika Dana – 10th CBSE School Topper</h4>
-			<h5>Aparna – 12th Grade Science English – 100%</h5>
-			<h5>Rifan K – 1st Grade Chemistry – 100%</h5>
-			<h5>Hredhan Abdullah Bin – 4th Grade Math Olympiad Gold Medal</h5>
-			<h5>Nyjil Abdullah Masood Rayya – 2nd Grade Olympiad Gold Medal, 9th Grade Maths & Science – 94%</h5>
-			<h5>Lena Vimal – 10th ICSE – 94%, Maths – 100%</h5>
-			<h5>Ajzal Akshay Mathew – 6th Grade SAT USA</h5>
-			<a href="#" class="btn">Read More</a>
-		</div>
-	</section>
-
 	<!---start contact section---->
 	<section class="contact" id="contact">
 		<div class="main-contact">
