--- a/index.html
+++ b/index.html
@@ -143,35 +143,7 @@
 			</div>
 		</div>
 
-		<div class="why-choose-section">
-			<h3>Why Choose Yours Tutor?</h3>
-			<div class="features-grid">
-				<div class="feature-item">
-					<i class='bx bxs-user-check'></i>
-					<span>Expert Verified Tutors</span>
-				</div>
-				<div class="feature-item">
-					<i class='bx bxs-home-alt-2'></i>
-					<span>Home & Online Classes</span>
-				</div>
-				<div class="feature-item">
-					<i class='bx bxs-group'></i>
-					<span>One-to-One & Group</span>
-				</div>
-				<div class="feature-item">
-					<i class='bx bxs-graduation'></i>
-					<span>KG to PG Coverage</span>
-				</div>
-				<div class="feature-item">
-					<i class='bx bxs-globe'></i>
-					<span>8+ Languages</span>
-				</div>
-				<div class="feature-item">
-					<i class='bx bxs-phone-call'></i>
-					<span>Parent WhatsApp Support</span>
-				</div>
-			</div>
-		</div>
+		
 
 		<div class="about-cta">
 			<a href="#" class="btn">Learn More About Us</a>
@@ -306,127 +278,225 @@
 			<h2>What Our Students & Parents Say</h2>
 		</div>
 
-		<div class="testimonials-content">
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course1.jpg">
+		<div class="testimonials-marquee">
+			<div class="marquee-content">
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course1.jpg" alt="Devika Dana">
+					</div>
+					<div class="testimonial-info">
+						<h4>Devika Dana</h4>
+						<h6>10th CBSE School Topper</h6>
+						<p>"Yours Tutor helped me achieve my dream of becoming a school topper. The personalized attention and expert guidance made all the difference."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
 				</div>
-				<div class="testimonial-text">
-					<h4>Devika Dana</h4>
-					<h6>10th CBSE School Topper</h6>
-					<p>"Yours Tutor helped me achieve my dream of becoming a school topper. The personalized attention and expert guidance made all the difference in my academic journey."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course2.jpg" alt="Aparna">
+					</div>
+					<div class="testimonial-info">
+						<h4>Aparna</h4>
+						<h6>12th Grade Science - 100%</h6>
+						<p>"The dedicated mentor support and monthly assessments helped me maintain perfect scores. The teachers are truly experts."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course3.jpg" alt="Hredhan Abdullah Bin">
+					</div>
+					<div class="testimonial-info">
+						<h4>Hredhan Abdullah Bin</h4>
+						<h6>4th Grade Math Olympiad Gold Medal</h6>
+						<p>"From struggling with math to winning gold medals, Yours Tutor's approach has transformed my understanding completely."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course4.jpg" alt="Lena Vimal">
+					</div>
+					<div class="testimonial-info">
+						<h4>Lena Vimal</h4>
+						<h6>10th ICSE - 94%, Maths - 100%</h6>
+						<p>"The WhatsApp support group keeps parents updated with real-time progress. Amazing transparency throughout."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course5.jpg" alt="Ajzal Akshay Mathew">
+					</div>
+					<div class="testimonial-info">
+						<h4>Ajzal Akshay Mathew</h4>
+						<h6>6th Grade SAT USA</h6>
+						<p>"The flexible learning options allowed me to study from home while preparing for international exams. World-class quality."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course1.jpg" alt="Nyjil Abdullah Masood Rayya">
+					</div>
+					<div class="testimonial-info">
+						<h4>Nyjil Abdullah Masood Rayya</h4>
+						<h6>2nd Grade Olympiad Gold Medal, 9th Grade Maths & Science - 94%</h6>
+						<p>"The multilingual approach helped me learn in my preferred language. Teachers are patient and explain in multiple languages."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<!-- Duplicate items for seamless loop -->
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course1.jpg" alt="Devika Dana">
+					</div>
+					<div class="testimonial-info">
+						<h4>Devika Dana</h4>
+						<h6>10th CBSE School Topper</h6>
+						<p>"Yours Tutor helped me achieve my dream of becoming a school topper. The personalized attention and expert guidance made all the difference."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course2.jpg" alt="Aparna">
+					</div>
+					<div class="testimonial-info">
+						<h4>Aparna</h4>
+						<h6>12th Grade Science - 100%</h6>
+						<p>"The dedicated mentor support and monthly assessments helped me maintain perfect scores. The teachers are truly experts."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course3.jpg" alt="Hredhan Abdullah Bin">
+					</div>
+					<div class="testimonial-info">
+						<h4>Hredhan Abdullah Bin</h4>
+						<h6>4th Grade Math Olympiad Gold Medal</h6>
+						<p>"From struggling with math to winning gold medals, Yours Tutor's approach has transformed my understanding completely."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course4.jpg" alt="Lena Vimal">
+					</div>
+					<div class="testimonial-info">
+						<h4>Lena Vimal</h4>
+						<h6>10th ICSE - 94%, Maths - 100%</h6>
+						<p>"The WhatsApp support group keeps parents updated with real-time progress. Amazing transparency throughout."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course5.jpg" alt="Ajzal Akshay Mathew">
+					</div>
+					<div class="testimonial-info">
+						<h4>Ajzal Akshay Mathew</h4>
+						<h6>6th Grade SAT USA</h6>
+						<p>"The flexible learning options allowed me to study from home while preparing for international exams. World-class quality."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+						</div>
+					</div>
+				</div>
+
+				<div class="testimonial-item">
+					<div class="testimonial-avatar">
+						<img src="img/course1.jpg" alt="Nyjil Abdullah Masood Rayya">
+					</div>
+					<div class="testimonial-info">
+						<h4>Nyjil Abdullah Masood Rayya</h4>
+						<h6>2nd Grade Olympiad Gold Medal, 9th Grade Maths & Science - 94%</h6>
+						<p>"The multilingual approach helped me learn in my preferred language. Teachers are patient and explain in multiple languages."</p>
+						<div class="rating">
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
+							<i class='bx bxs-star'></i>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course2.jpg">
-				</div>
-				<div class="testimonial-text">
-					<h4>Aparna</h4>
-					<h6>12th Grade Science - 100%</h6>
-					<p>"The dedicated mentor support and monthly assessments helped me maintain perfect scores. The teachers are truly experts in their subjects."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course3.jpg">
-				</div>
-				<div class="testimonial-text">
-					<h4>Hredhan Abdullah Bin</h4>
-					<h6>4th Grade Math Olympiad Gold Medal</h6>
-					<p>"From struggling with math to winning gold medals, Yours Tutor's approach to teaching has transformed my understanding of mathematics completely."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course4.jpg">
-				</div>
-				<div class="testimonial-text">
-					<h4>Lena Vimal</h4>
-					<h6>10th ICSE - 94%, Maths - 100%</h6>
-					<p>"The WhatsApp support group keeps parents updated with real-time progress. It's amazing how they maintain transparency throughout the learning process."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course5.jpg">
-				</div>
-				<div class="testimonial-text">
-					<h4>Ajzal Akshay Mathew</h4>
-					<h6>6th Grade SAT USA</h6>
-					<p>"The flexible learning options allowed me to study from home while preparing for international exams. The quality of education is world-class."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="testimonial-box">
-				<div class="testimonial-img">
-					<img src="img/course1.jpg">
-				</div>
-				<div class="testimonial-text">
-					<h4>Nyjil Abdullah Masood Rayya</h4>
-					<h6>2nd Grade Olympiad Gold Medal, 9th Grade Maths & Science - 94%</h6>
-					<p>"The multilingual approach helped me learn in my preferred language. The teachers are patient and explain concepts in multiple languages."</p>
-					<div class="rating">
-						<div class="star">
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-							<a href="#"><i class='bx bxs-star' ></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
 		</div>
 
 		<div class="main-btn">
