updated ui and contents

--- a/index.html
+++ b/index.html
@@ -104,49 +104,17 @@
 
 	<!---start about section---->
 	<section class="about" id="about">
-		<div class="about-header">
-			<div class="about-text">
-				<h2>About Yours Tutor</h2>
-				<p>Yours Tutor is a premier educational institution dedicated to providing world-class individual tuition services. Founded with the vision of making quality education accessible to every student, we have established ourselves as the preferred choice for personalized learning across India and beyond.</p>
-			</div>
+		<div class="about-img">
+			<img src="img/about.png">
 		</div>
-
-		<div class="about-cards">
-			<div class="about-card">
-				<div class="card-icon">
-					<i class='bx bxs-target-lock'></i>
-				</div>
-				<div class="card-content">
-					<h3>Our Mission</h3>
-					<p>To provide expert, personalized education that transforms students from below average to toppers, ensuring academic excellence and holistic development.</p>
-				</div>
-			</div>
-
-			<div class="about-card">
-				<div class="card-icon">
-					<i class='bx bxs-bulb'></i>
-				</div>
-				<div class="card-content">
-					<h3>Our Vision</h3>
-					<p>To become the world's finest individual tuition provider, making quality education accessible to students from KG to PG across all subjects and syllabi.</p>
-				</div>
-			</div>
-
-			<div class="about-card">
-				<div class="card-icon">
-					<i class='bx bxs-globe-alt'></i>
-				</div>
-				<div class="card-content">
-					<h3>Global Presence</h3>
-					<p>We serve students across India, UK, USA, GCC Countries, Africa, Japan, and Australia, making quality education accessible worldwide.</p>
-				</div>
-			</div>
-		</div>
-
-		
-
-		<div class="about-cta">
-			<a href="#" class="btn">Learn More About Us</a>
+		<div class="about-text">
+			<h2>About Yours Tutor</h2>
+			<p>Yours Tutor is a premier educational institution dedicated to providing world-class individual tuition services. Founded with the vision of making quality education accessible to every student, we have established ourselves as the preferred choice for personalized learning across India and beyond.</p>
+			<h4>Our Mission</h4>
+			<p>To provide expert, personalized education that transforms students from below average to toppers, ensuring academic excellence and holistic development.</p>
+			<h4>Our Vision</h4>
+			<p>To become the world's finest individual tuition provider, making quality education accessible to students from KG to PG across all subjects and syllabi.</p>
+			
 		</div>
 	</section>
 
@@ -200,7 +168,7 @@
 				</div>
 			</div>
 
-			<div class="feature-card">
+			<!-- <div class="feature-card">
 				<div class="feature-icon">
 					<i class='bx bxs-user-detail'></i>
 				</div>
@@ -264,7 +232,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="main-btn">
 			<a href="#" class="btn">Explore All Features</a>
@@ -522,6 +490,13 @@
 					</div>
 					<div class="form-group">
 						<input type="tel" placeholder="Phone Number" required>
+					</div>
+					<div class="form-group">
+						<select required>
+							<option value="">Select Role</option>
+							<option value="student">Student</option>
+							<option value="teacher">Teacher</option>
+						</select>
 					</div>
 					<div class="form-group">
 						<select required>
