--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Yours Tutor - World's Finest for Individual Tuition</title>
+	<title>LearnX - World's Finest for Individual Tuition</title>
 
 	<!---custom css link---->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,7 +20,7 @@
 	<!---start header---->
 	<header>
 		<a href="#" class="logo">
-			<img src="YoursTutor-Logo.png">
+			<span>LearnX</span>
 		</a>
 
 		<ul class="navbar">
@@ -45,7 +45,7 @@
 	<section class="home" id="home">
 		<div class="home-text">
 			<h6>World's Finest for Individual Tuition</h6>
-			<h1>YOURS TUTOR</h1>
+			<h1>LEARNX</h1>
 			<p>Offline & Online Tuition Available for All Classes</p>
 			<!-- <div class="contact-info">
 				<p>📞 +91 7907 041 628 | +966 53 160 1172</p>
@@ -108,8 +108,8 @@
 			<img src="img/about.png">
 		</div>
 		<div class="about-text">
-			<h2>About Yours Tutor</h2>
-			<p>Yours Tutor is a premier educational institution dedicated to providing world-class individual tuition services. Founded with the vision of making quality education accessible to every student, we have established ourselves as the preferred choice for personalized learning across India and beyond.</p>
+			<h2>About LearnX</h2>
+			<p>LearnX is a premier educational institution dedicated to providing world-class individual tuition services. Founded with the vision of making quality education accessible to every student, we have established ourselves as the preferred choice for personalized learning across India and beyond.</p>
 			<h4>Our Mission</h4>
 			<p>To provide expert, personalized education that transforms students from below average to toppers, ensuring academic excellence and holistic development.</p>
 			<h4>Our Vision</h4>
@@ -124,7 +124,7 @@
 	<section class="features" id="courses">
 		<div class="center-text">
 			<h5>FEATURES</h5>
-			<h2>Why Choose Yours Tutor?</h2>
+			<h2>Why Choose LearnX?</h2>
 			<p>Discover the unique advantages that make us the preferred choice for quality education</p>
 		</div>
 
@@ -476,7 +476,7 @@
 	<section class="register" id="register">
 		<div class="center-text">
 			<h5>REGISTER</h5>
-			<h2>Join Yours Tutor Today</h2>
+			<h2>Join LearnX Today</h2>
 		</div>
 
 		<div class="register-content">
@@ -638,7 +638,7 @@
 	<section class="contact" id="contact">
 		<div class="main-contact">
 			<div class="contact-content">
-				<img src="img/logo.svg">
+				<h3 style="font-size: 2rem; font-weight: 800; color: var(--main-color); margin-bottom: 20px;">LearnX</h3>
 				<li><a href="#">Facebook</a></li>
 				<li><a href="#">Instagram</a></li>
 				<li><a href="#">Twitter</a></li>
@@ -661,17 +661,17 @@
 			</div>
 
 			<div class="contact-content">
-				<li><a href="#">Smart Trade City, Kottakkal,<br> Malappuram Dt., Kerala, India</a></li>
-				<li><a href="#">info@yourstutor.in</a></li>
-				<li><a href="#">+91 7907 041 628</a></li>
-				<li><a href="#">+966 53 160 1172</a></li>
+				<li><a href="#">Tech Park, Bangalore,<br> Karnataka, India</a></li>
+				<li><a href="#">info@learnx.com</a></li>
+				<li><a href="#">+91 98765 43210</a></li>
+				<li><a href="#">+91 87654 32109</a></li>
 			</div>
 
 		</div>
 	</section>
 
 	<div class="last-text">
-		<p>© 2024 Yours Tutor. All rights reserved.</p>
+		<p>© 2024 LearnX. All rights reserved.</p>
 	</div>
 
 	<!---custom js link---->
