--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 			<li><a href="#testimonials">Testimonials</a></li>
 			<li><a href="#register">Register</a></li>
 			<li><a href="#faq">FAQ</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#contact-form">Contact</a></li>
+
 		</ul>
 
 		<div class="header-icons">
@@ -597,6 +598,116 @@
 				<div class="faq-answer">
 					<p>Simply fill out our registration form above or contact us at +91 7907 041 628. We'll arrange a consultation and start your learning journey.</p>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Contact Form Section -->
+	<section class="contact-form-section" id="contact-form">
+		<div class="center-text">
+			<h5>Get In Touch</h5>
+			<h2>Contact Us</h2>
+			<p>Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+		</div>
+
+		<div class="contact-form-container">
+			<div class="contact-info-side">
+				<h3>Contact Information</h3>
+				<p>Ready to start your learning journey? Reach out to us through any of these channels.</p>
+				
+				<div class="contact-info-cards">
+					<div class="contact-info-card">
+						<div class="contact-info-icon">
+							<i class='bx bx-map'></i>
+						</div>
+						<div class="contact-info-details">
+							<h4>Our Location</h4>
+							<p>Tech Park, Bangalore,<br>Karnataka, India</p>
+						</div>
+					</div>
+
+					<div class="contact-info-card">
+						<div class="contact-info-icon">
+							<i class='bx bx-phone'></i>
+						</div>
+						<div class="contact-info-details">
+							<h4>Phone Numbers</h4>
+							<p>+91 98765 43210<br>+91 87654 32109</p>
+						</div>
+					</div>
+
+					<div class="contact-info-card">
+						<div class="contact-info-icon">
+							<i class='bx bx-envelope'></i>
+						</div>
+						<div class="contact-info-details">
+							<h4>Email Address</h4>
+							<p>info@learnx.com<br>support@learnx.com</p>
+						</div>
+					</div>
+
+					<div class="contact-info-card">
+						<div class="contact-info-icon">
+							<i class='bx bx-time'></i>
+						</div>
+						<div class="contact-info-details">
+							<h4>Working Hours</h4>
+							<p>Monday - Friday: 9:00 AM - 8:00 PM<br>Saturday: 9:00 AM - 6:00 PM</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="contact-form-side">
+				<h3>Send us a Message</h3>
+				<form class="main-contact-form">
+					<div class="form-row">
+						<div class="form-group">
+							<label for="contactFirstName">First Name *</label>
+							<input type="text" id="contactFirstName" name="contactFirstName" required>
+						</div>
+						<div class="form-group">
+							<label for="contactLastName">Last Name *</label>
+							<input type="text" id="contactLastName" name="contactLastName" required>
+						</div>
+					</div>
+
+					<div class="form-row">
+						<div class="form-group">
+							<label for="contactEmail">Email Address *</label>
+							<input type="email" id="contactEmail" name="contactEmail" required>
+						</div>
+						<div class="form-group">
+							<label for="contactPhone">Phone Number *</label>
+							<input type="tel" id="contactPhone" name="contactPhone" required>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="contactSubject">Subject *</label>
+						<select id="contactSubject" name="contactSubject" required>
+							<option value="">Select a subject</option>
+							<option value="general">General Inquiry</option>
+							<option value="admission">Admission & Registration</option>
+							<option value="courses">Course Information</option>
+							<option value="support">Technical Support</option>
+							<option value="feedback">Feedback & Suggestions</option>
+							<option value="partnership">Partnership Opportunities</option>
+						</select>
+					</div>
+
+					<div class="form-group">
+						<label for="contactMessage">Message *</label>
+						<textarea id="contactMessage" name="contactMessage" rows="6" placeholder="Tell us how we can help you..." required></textarea>
+					</div>
+
+					<div class="form-group">
+						<button type="submit" class="contact-submit-btn">
+							<i class='bx bx-send'></i>
+							Send Message
+						</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</section>
